--- a/Lesson20-21/index.html
+++ b/Lesson20-21/index.html
@@ -26,15 +26,27 @@
     </style>
 </head>
 <body>
-<button>Change color</button>
+<h1>1. 点击按钮改变背景颜色</h1>
+<button class="change-btn">Change color</button>
 
 <div class="">
+    <h1>2. 学习了解 JavaScript 事件的知识</h1>
+    <div>
+        <p>当点击按钮 submit-btn 时，在console中输出 name 中的内容</p>
+        <p>在输入过程中，如果按回车键，则同样执行上一条的需求</p>
+        <p>在输入过程中，如果按 ESC 键，则把输入框中的内容清空</p>
+    </div>
     <input id="name" type="text">
     <button id="submit-btn">Submit</button>
 </div>
 
 
 <div>
+    <h1>3. 控制元素的显示及隐藏</h1>
+    <div>
+        <p>当用户选择了 School 的单选框时，显示 School 的下拉选项，隐藏 Company 的下拉选项</p>
+        <p>当用户选择了 School 的单选框时，显示 Company 的下拉选项，隐藏 School 的下拉选项</p>
+    </div>
     <label>
         <input id="school" name="status" type="radio">
         School
@@ -57,6 +69,7 @@
 </div>
 
 <div>
+    <h1>4. 点击某一个 Li 标签时，将 Li 的背景色显示在 P 标签内，并将 P 标签中的文字颜色设置成 Li 的背景色</h1>
     <ul class="palette">
         <li style="background-color:crimson"></li>
         <li style="background-color:bisque"></li>
@@ -73,16 +86,53 @@
 
 
 <div>
+    <h1></h1>
     <a class="aaa" href="">aaaaaaaaaaa</a>
+</div>
+
+<div>
+    <h1>5. 使用setTimeout 计时</h1>
+    <button class="start-btn">点击计时</button>
+    <input class="time-input" type="text">
+    <button class="stop-btn">停止计时</button>
+</div>
+
+<div>
+    <h1>6. 使用setInterval 计时</h1>
+    <div id="ant">0</div>
+    <input type="button" id="bt" value="停止定时器"/>
+</div>
+
+<div>
+    <h1>7. </h1>
+    <p>点击按钮时，开始改变 fade-obj 的透明度，开始一个淡出（逐渐消失）动画，直到透明度为0</p>
+    <p>在动画过程中，按钮的状态变为不可点击</p>
+    <p>在动画结束后，按钮状态恢复，且文字变成“淡入”</p>
+    <p>在 按钮显示 淡入 的状态时，点击按钮，开始一个“淡入”（逐渐出现）的动画，和上面类似按钮不可点，直到透明度完全不透明</p>
+    <p>淡入动画结束后，按钮文字变为“淡出”</p>
+    <div id="fade-obj" style="width:300px;height:300px;background:#000"></div>
+    <button id="fade-btn">淡出</button>
+</div>
+
+<style>
+    .bg-smile {
+        width: 480px;
+        height: 480px;
+        overflow: hidden;
+        background: url('img/erik_ce204002.jpg') no-repeat center;
+    }
+</style>
+<div>
+    <h1>8. 帧动画</h1>
+    <div class="bg-smile"></div>
 </div>
 <script>
 // 改变背景色-------
-let btn = document.getElementsByTagName('button');
-for(let i = 0;i < btn.length;i++) {
-    btn[i].addEventListener('click', function() {
-        document.body.style.backgroundColor = 'rgb(' + random(255) + ', ' + random(255) + ', ' + random(255) + ')';
-    })
-}
+let btn = document.getElementsByClassName('change-btn');
+btn[0].addEventListener('click', function() {
+    document.body.style.backgroundColor = 'rgb(' + random(255) + ', ' + random(255) + ', ' + random(255) + ')';
+})
+
 
 function random(number) {
     // Math.random();  返回0-1之间的随机数，包含0不包含1；
@@ -146,8 +196,6 @@ for (var i = i = 0, len = item.length; i < len; i++) {
 
 
 
-
-
 var eventUtil = {
     addHandles: function(element, type, handlers) {
         if(element.addEventListener) {
@@ -199,6 +247,124 @@ function handlers2() {
     alert('in')
 }
 eventUtil.addHandles(aaa[0], 'click', handlers2)
+
+
+
+// 点击计时，暂停
+let startBtn = document.getElementsByClassName('start-btn');
+let timeInput = document.getElementsByClassName('time-input');
+let stopBtn = document.getElementsByClassName('stop-btn');
+let num = 1;
+let time;
+startBtn[0].addEventListener('click', setTime);
+function setTime() {
+    timeInput[0].value = num;
+    num += 1;
+    time = setTimeout('setTime()', 1000);
+}
+stopBtn[0].addEventListener('click', function() {
+    clearTimeout(time);
+});
+
+
+var count = 0;
+var max = 20;
+var bt = document.getElementById("bt");
+function show(max) {
+    if (count >= max) {
+        clearInterval(flag);
+        return;
+    }
+    document.getElementById("ant").innerHTML = count + 1;
+    count = count + 1;
+}
+var flag = setInterval(show, 1000, max);
+bt.onclick = function () {
+    clearInterval(flag);
+}
+
+
+// 作业四
+/*
+ * 分别使用 setTimeout 和 setInterval 实现以下功能：
+ * 点击按钮时，开始改变 fade-obj 的透明度，开始一个淡出（逐渐消失）动画，直到透明度为0
+ * 在动画过程中，按钮的状态变为不可点击
+ * 在动画结束后，按钮状态恢复，且文字变成“淡入”
+ * 在 按钮显示 淡入 的状态时，点击按钮，开始一个“淡入”（逐渐出现）的动画，和上面类似按钮不可点，直到透明度完全不透明
+ * 淡入动画结束后，按钮文字变为“淡出”
+ * 暂时不要使用 CSS animation （以后我们再学习）
+ */
+let fadeObj = document.getElementById('fade-obj');
+let fadeBtn = document.getElementById('fade-btn');
+let opacity1 = 1;
+let change;
+fadeBtn.addEventListener('click', function() {
+    if(fadeBtn.innerHTML === '淡出') {
+        fadeUp(100);
+    }else if(fadeBtn.innerHTML === '淡入') {
+        fadeOut(0);
+    }
+});
+function fadeUp(value) {
+    let t = setTimeout(function(){
+        if(value) {
+            value -= 10;
+            fadeObj.style.opacity = value / 100;
+            fadeBtn.disabled = true;
+            fadeUp(value);
+        }else if(value === 0) {
+            fadeBtn.innerHTML = '淡入';
+            fadeBtn.disabled = false;
+
+            /*value += 10;
+            fadeObj.style.opacity = value / 100;
+            */
+            clearTimeout(t);
+        }
+    }, 100);
+}
+function fadeOut(value) {
+    let t = setInterval(function() {
+       if(value < 100) {
+           value += 10;
+           fadeObj.style.opacity = value / 100;
+           fadeBtn.disabled = true;
+       }else if(value === 100) {
+           fadeBtn.innerHTML = '淡出';
+           fadeBtn.disabled = false;
+
+           clearInterval(t);
+       }
+    }, 100);
+}
+
+
+// 最后一个作业
+let bgSmile = document.getElementsByClassName('bg-smile');
+let step = 0;
+let allStep = 16;
+let boo = true;
+let tt = setInterval(smile, 100);
+function smile () {
+    if(boo) {
+        if(step < allStep) {
+            bgSmile[0].style.backgroundPositionY = -step * 480 +'px';
+            step ++;
+            if(step === allStep) {
+                boo = false;
+                return;
+            }
+        }
+    }
+    if(!boo) {
+        bgSmile[0].style.backgroundPositionY = -step * 480 +'px';
+        step --;
+        if(step === 0) {
+            boo = true;
+            return;
+        }
+    }
+}
 </script>
 </body>
 </html>
