--- a/Lesson25-27/index.html
+++ b/Lesson25-27/index.html
@@ -68,9 +68,10 @@
     <select id="second-select">
         <option value="">请选择</option>
     </select> 秒
+    <button id="judgeTimeBtn">开始比对</button>
 
     <p>现在时间： <span id="nowDate"></span></p>
-    <p id="result-wrapper">现在距离 2001年1月1日星期X HH:MM:SS 还有 X 天 X 小时 X 分 X 秒</p>
+    <p id="result-wrapper"></p>
 </div>
 <script src="selectTime.js"></script>
 
