add Lesson25-27 again again

--- a/Lesson28-30/index.html
+++ b/Lesson28-30/index.html
@@ -3,42 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="index.css">
     <style>
         .describe {
             font-size: 12px;
             color: slategray;
-        }
-
-        .wrapper {
-            position: relative;
-            width: 400px;
-        }
-        #email-input {
-            padding: 5px 10px;
-        }
-        .email-sug {
-            position: absolute;
-            top: 29px;
-            width: 100%;
-            overflow: hidden;
-            white-space: nowrap;
-            background: #fff;
-            border: 1px solid rgb(238, 238, 238);
-            margin: 0;
-            padding: 0;
-        }
-        .email-sug li {
-            list-style: none;
-            padding: 4px 10px;
-        }
-        .email-sug li:hover{
-            background-color: cornflowerblue;
-            color: #fff;
-        }
-        /*,.email-sug li:first-child*/
-         .email-sug li.active{
-            background-color: lightpink;
-            color: #fff;
         }
     </style>
 </head>
